src/pages/Home/Home.scss
@use "../../styles/variables" as *;
@use "../../styles/mixins" as *;
@use "../../styles/fonts" as *;

@keyframes bounce {
  from {
    margin-bottom: 16px;
  }
  to {
    margin-bottom: 0;
  }
}

.home {
  display: flex;
  flex-direction: column;
  padding: 100px 15px 0;
  max-width: 1700px;

  @include tablet {
    padding-top: 80px;
    padding-left: 70px;
  }

  @include desktop {
    flex-direction: row;
    justify-content: space-between;
    padding-top: 10px;
  }

  &__top {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    @include desktop {
      justify-content: end;
      padding-left: 62px;
      padding-right: 30px;
      padding-bottom: 45px;
    }
  }

  &__title {
    font-size: 13px;

    @include tablet {
      font-size: 16px;
    }

    @include desktop {
      font-weight: 600;
    }
  }

  &__description {
    font-size: 12px;
    opacity: 0.7;
    color: white;
    margin: 0;

    @include tablet {
      font-size: 14px;
    }

    &-more {
      font-size: 12px;
      opacity: 0.7;

      &:hover {
        opacity: 1;
        text-decoration: underline;
        color: white;
      }
    }
  }

  &__open {
    font-size: 12px;
    opacity: 0.7;

    @include tablet {
      font-size: 14px;
    }
  }

  &__bottom {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-top: 32px;

    &-text {
      font-size: 55px;
      font-family: "Libre";
      transition: 0.5s;
      opacity: 0.1;
      width: fit-content;
      overflow: hidden;

      @include tablet {
        font-size: 100px;
      }

      @include desktop {
        font-size: 140px;
      }

      &:hover {
        text-decoration: none;
        color: $primary-color-white;
        opacity: 1;
      }
    }

    &-wrapper {
      display: block;
      transition: 1s;
      animation: showBottomText 1s;
      animation-delay: 0s;
      animation-fill-mode: forwards;
      transform: translate(0, 0);

      &__img {
        width: 300px;
        padding-bottom: 10px;
        padding-left: 10px;
      }
    }

    &-about {
      display: block;
      transition: 1s;
      animation: showBottomText 1s;
      animation-delay: 0s;
      animation-fill-mode: forwards;
      transform: translate(0, 0);
    }
  }

  &__container {
    display: flex;
    overflow: hidden;
    height: 250px;
    align-items: center;
    justify-content: center;
    margin-right: 55px;

    &-logo {
      height: 500px;
      max-width: none;
    }
  }

  &__scroll {
    height: 40px;
    display: flex;
    justify-content: end;
    position: fixed;
    bottom: 16px;
    right: 16px;
    animation: bounce 1s 20 alternate;

    &-arrow {
      height: 30px;
      transform: rotate(-90deg);
      opacity: 0.5;

      &:hover {
        opacity: 1;
        animation: none;
      }
    }
  }

  &__subtitle {
    font-size: 12px;
    font-style: italic;
    color: white;
  }

  &__list {
    padding-left: 0;

    &-item {
      list-style: none;
    }

    &-wrapper {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      background-color: $primary-color-background;
    }

    &-title {
      font-size: 13px;
      margin: 0;
    }

    &-description {
      font-size: 10px;
      opacity: 0.7;
      text-align: center;
      margin: 5px 0 0;
    }
  }

  &__email {
    font-size: 14px;
    font-weight: 700;

    &-me {
      font-size: 12px;
    }
  }

  &__reach {
    font-size: 12px;
    opacity: 0.7;
  }
}

.hidden {
  display: none;
}

